--- a/css/custom-editor-style.css
+++ b/css/custom-editor-style.css
@@ -13821,6 +13821,10 @@ body .post-password-required {
   border: 3px solid #babf10;
 }
 
+.wpl-iframe-placeholder {
+  margin-top: -56%;
+}
+
 .swiper-button-next,
 .swiper-button-prev {
   transition: 0.2s;
