--- a/src/sass/theme/components/_extras.scss
+++ b/src/sass/theme/components/_extras.scss
@@ -2,3 +2,7 @@
     padding: .5rem;
     border: 3px solid #babf10;
 }
+
+.wpl-iframe-placeholder {
+    margin-top: -56%;
+}
